# ArbiterOS-Alpha

./: .gitignore  .gitmodules  .pre-commit-config.yaml  =1.1.3  AGENTS.md  GEMINI.md  README.md  finance_workflow.mmd  mkdocs.yml  out.md  plan_execute_workflow.mmd  pyproject.toml  requirements.txt  workflow.mmd
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml
arbiteros_alpha/: __init__.py  checkpoint.py  core.py  evaluation.py  history.py  instructions.py  kernel_policy_list.yaml  langfuse_integration.py  policy.py  policy_loader.py  schemas.py  ui.py  utils.py
arbiteros_alpha/migrator/: README.md  __init__.py  __main__.py  analyzer.py  classifier.py  cli.py  generator.py  logger.py  parser.py  policy_designer.py  repo_scanner.py  schema_designer.py  schemas.py
arbiteros_alpha/transform/: README.md  __init__.py  __main__.py  classifier.py  cli.py  generator.py  logger.py  parser.py
docs/: index.md  policies.md  policy_management.md
docs/api/: core.md  evaluation.md  instructions.md  policy.md
docs/concepts/: evaluators.md  policies.md
docs/examples/: complete-tutorial.md  evaluator-tutorial.md
docs/getting-started/: installation.md  migration.md  quickstart.md
examples/: custom_policy_list.yaml  evaluator.py  gui.py  langgraph.py  langgraph_transform.py  main.py  native.py  native_tutorial.ipynb  orchestrator.py  plan_and_execute_demo.py  reflection.py  schema_example.py  toy.py  vanilla.py
examples/WebVoyager/: web_voyager.ipynb
examples/finance/: __init__.py  custom_policy.py  custom_policy_list.yaml  trading_graph.py
tests/: README.md  __init__.py  conftest.py  test_arbiter_os.py  test_evaluation.py  test_examples.py  test_examples_finance.py  test_examples_gui.py  test_migrator.py  test_plan_and_execute.py  test_policy.py  test_rollout.py  test_rollout_strict.py  test_trading_governance.py  test_transform.py
(+15 files in other folders)
