[project]
name = "arbiteros-alpha"
version = "0.1.0"
description = "Yet another Arbiter-OS MVP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.0.2",
    "langgraph>=1.0.1",
    "pre-commit>=4.3.0",
    "rich>=14.2.0",
]

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
