[project]
name = "arbiteros-alpha"
version = "0.1.0"
description = "Yet another Arbiter-OS MVP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.0.2",
    "langgraph>=1.0.1",
    "rich>=14.2.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.0.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.23",
    "mkdocstrings>=0.30.1",
    "mkdocstrings-python>=1.18.2",
    "ruff>=0.14.3"
]

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
